--- a/sass/sleep.scss
+++ b/sass/sleep.scss
@@ -89,6 +89,12 @@ header {
 	}
 }
 
+.supporting {
+	align-items: start;
+	padding: 2em 0 1em 0;
+
+}
+
 .main {
 	background: url("../img/Sleepcat.jpg") center top no-repeat;
   	background-size: cover;
