--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,7 @@
 $dark-blue: #072154;
 $light-blue: #dfe7ff;
 $red: #ff0000;
+$white: #ffffff;
 
 * {
 	box-sizing: border-box;
@@ -33,7 +34,7 @@ h2 {
 }
 
 p {
-	color: #fff;
+	color: $white;
 	line-height: 1.5em;
 	text-align: left;
 }
@@ -42,7 +43,9 @@ p {
 	display: grid;
 	width: 100%;
 	grid-template-rows: auto 32em auto auto;
+	// banner photo will remain a fixed size
 	grid-template-columns: 1fr 1fr;
+	// this ensures 50% for title and navigation
 }
 
 header, .navlinks, footer {
@@ -56,6 +59,7 @@ header, .navlinks, footer {
 	list-style: none;
 	align-items: center;
 	justify-content: flex-end;
+	//pushes navlinks to the right of the page
 	margin-right: 10%;
 
 	li {
@@ -73,6 +77,7 @@ header, .navlinks, footer {
 			text-decoration: none;
 			color: $red;
 			width: 100%;
+			// height and width 100% so fills li container
 
 			&:hover {
 				color: $dark-blue;
@@ -82,9 +87,11 @@ header, .navlinks, footer {
 
 	#dropdown-menu {
 		position: absolute;
+		// absolutely positioned within a relative container
 		top:100%;
 		padding: 0;
 		display: none;
+		// hidden until click. See script
 
 		li a {
 			font-size: 0.5em;
@@ -97,7 +104,6 @@ header, .navlinks, footer {
 	background-image: url("../img/Myeongjiview.jpg");
 	background-size: cover;
 	background-position: center;
-	min-height: 500px;
 	grid-column: 1 / span 2;
 }
 
@@ -119,23 +125,23 @@ header, .navlinks, footer {
 	margin: 0 auto;
 	width: 70%;
 	padding-bottom: 5%;
-	max-width: 700px;
+	max-width: 600px;
 
 	h2 {
-		color: #fff;
+		color: $white;
 		margin-bottom: 5%;
 	}
 }
 
 .projects {
 	display: grid;
+	// grid to easily layout project images
 	width: 90%;
 	height: auto;
 	margin: 0 auto;
 	grid-template-rows: 1fr 1fr;
 	grid-template-columns: 1fr 1fr 1fr;
 	grid-gap: 1em 1em;
-	justify-content: end;
 	line-height: 0;
 	padding-bottom: 5%;
 }
@@ -143,7 +149,7 @@ header, .navlinks, footer {
 .project {
 	max-width: 300px;
 	margin: 0 auto;
-	border: 2px solid #fff;
+	border: 2px solid $white;
 
 	&:hover {
 		border: 2px solid $red;
@@ -156,19 +162,28 @@ img {
 }
 
 .button {
-	margin: 2em auto;
-	padding: 0.5em 3em;
-	border-radius: 5px;
-	font-size: 1.5em;
-	font-weight: 300;
-	color: $red;
-	background-color: $light-blue;
-	border: 2px solid #fff;
+		margin: 0 auto 5em auto;
+		padding: 0;
+		border-radius: 5px;
+		background-color: $light-blue;
+		border: 2px solid $white;
 
-	&:hover {
-		color: $dark-blue;
-		border: 2px solid $red;
-	}
+		a {
+			display: block;
+			width: 100%;
+			height: 100%;
+			padding: 0.5em 3em;
+			color: $red;
+			text-decoration: none;
+			font-size: 2.5em;
+			font-weight: 300;
+			
+		}
+
+		&:hover {
+				color: $dark-blue;
+				border: 2px solid $red;
+			}
 }
 
 footer {
