--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -1,22 +1,18 @@
-/* line 5, ../sass/style.scss */
 * {
   box-sizing: border-box;
 }
 
-/* line 9, ../sass/style.scss */
 html {
   text-align: center;
-  font-family: 'Raleway', sans-serif;
+  font-family: "Raleway", sans-serif;
   background-color: #dfe7ff;
   color: #072154;
 }
 
-/* line 16, ../sass/style.scss */
 body {
   margin: 0;
 }
 
-/* line 20, ../sass/style.scss */
 h1 {
   font-size: 4em;
   font-weight: 300;
@@ -24,7 +20,6 @@ h1 {
   margin: 0 0 0 10%;
 }
 
-/* line 27, ../sass/style.scss */
 h2 {
   font-size: 2em;
   font-weight: 700;
@@ -33,14 +28,12 @@ h2 {
   display: inline-block;
 }
 
-/* line 35, ../sass/style.scss */
 p {
-  color: #fff;
+  color: #ffffff;
   line-height: 1.5em;
   text-align: left;
 }
 
-/* line 41, ../sass/style.scss */
 .grid {
   display: grid;
   width: 100%;
@@ -48,13 +41,11 @@ p {
   grid-template-columns: 1fr 1fr;
 }
 
-/* line 48, ../sass/style.scss */
 header, .navlinks, footer {
-  font-family: 'Open Sans Condensed', sans-serif;
+  font-family: "Open Sans Condensed", sans-serif;
   display: flex;
 }
 
-/* line 53, ../sass/style.scss */
 .navlinks {
   padding: 0;
   margin: 0;
@@ -63,7 +54,6 @@ header, .navlinks, footer {
   justify-content: flex-end;
   margin-right: 10%;
 }
-/* line 61, ../sass/style.scss */
 .navlinks li {
   height: 100%;
   display: flex;
@@ -71,7 +61,6 @@ header, .navlinks, footer {
   font-size: 1.25em;
   position: relative;
 }
-/* line 68, ../sass/style.scss */
 .navlinks li a {
   display: flex;
   height: 100%;
@@ -81,33 +70,27 @@ header, .navlinks, footer {
   color: #ff0000;
   width: 100%;
 }
-/* line 77, ../sass/style.scss */
 .navlinks li a:hover {
   color: #072154;
 }
-/* line 83, ../sass/style.scss */
 .navlinks #dropdown-menu {
   position: absolute;
   top: 100%;
   padding: 0;
   display: none;
 }
-/* line 89, ../sass/style.scss */
 .navlinks #dropdown-menu li a {
   font-size: 0.5em;
   background-color: #dfe7ff;
 }
 
-/* line 96, ../sass/style.scss */
 .banner {
   background-image: url("../img/Myeongjiview.jpg");
   background-size: cover;
   background-position: center;
-  min-height: 500px;
-  grid-column: 1 / span 2;
+  grid-column: 1/span 2;
 }
 
-/* line 104, ../sass/style.scss */
 .intro {
   width: 70%;
   position: relative;
@@ -116,27 +99,23 @@ header, .navlinks, footer {
   max-width: 600px;
 }
 
-/* line 112, ../sass/style.scss */
 .main {
   background-color: #072154;
-  grid-column: 1 / span 2;
+  grid-column: 1/span 2;
 }
 
-/* line 117, ../sass/style.scss */
 .feature {
   position: relative;
   margin: 0 auto;
   width: 70%;
   padding-bottom: 5%;
-  max-width: 700px;
+  max-width: 600px;
 }
-/* line 124, ../sass/style.scss */
 .feature h2 {
-  color: #fff;
+  color: #ffffff;
   margin-bottom: 5%;
 }
 
-/* line 130, ../sass/style.scss */
 .projects {
   display: grid;
   width: 90%;
@@ -145,93 +124,87 @@ header, .navlinks, footer {
   grid-template-rows: 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
   grid-gap: 1em 1em;
-  justify-content: end;
   line-height: 0;
   padding-bottom: 5%;
 }
 
-/* line 143, ../sass/style.scss */
 .project {
   max-width: 300px;
   margin: 0 auto;
-  border: 2px solid #fff;
+  border: 2px solid #ffffff;
 }
-/* line 148, ../sass/style.scss */
 .project:hover {
   border: 2px solid #ff0000;
 }
 
-/* line 153, ../sass/style.scss */
 img {
   width: 100%;
   height: 100%;
 }
 
-/* line 158, ../sass/style.scss */
 .button {
-  margin: 2em auto;
-  padding: 0.5em 3em;
+  margin: 0 auto 5em auto;
+  padding: 0;
   border-radius: 5px;
-  font-size: 1.5em;
-  font-weight: 300;
-  color: #ff0000;
   background-color: #dfe7ff;
-  border: 2px solid #fff;
+  border: 2px solid #ffffff;
 }
-/* line 168, ../sass/style.scss */
+.button a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  padding: 0.5em 3em;
+  color: #ff0000;
+  text-decoration: none;
+  font-size: 2.5em;
+  font-weight: 300;
+}
 .button:hover {
   color: #072154;
   border: 2px solid #ff0000;
 }
 
-/* line 174, ../sass/style.scss */
 footer {
   padding: 0 5%;
-  grid-column: 1 / span 2;
+  grid-column: 1/span 2;
   justify-content: space-between;
 }
-/* line 179, ../sass/style.scss */
 footer ul {
   padding: 0;
 }
-/* line 182, ../sass/style.scss */
 footer ul li {
   list-style: none;
 }
 
 @media only screen and (max-width: 768px) {
-  /* line 190, ../sass/style.scss */
   .grid {
     grid-template-rows: auto auto 32em auto auto;
     grid-template-columns: 1fr;
   }
 
-  /* line 195, ../sass/style.scss */
   header, .navlinks {
-    grid-column: 1 / span 2;
+    grid-column: 1/span 2;
     margin: 0 auto;
   }
 
-  /* line 200, ../sass/style.scss */
   h1 {
     margin: 0 auto;
   }
 
-  /* line 204, ../sass/style.scss */
   .projects {
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr 1fr;
   }
 
-  /* line 209, ../sass/style.scss */
   footer {
     flex-direction: column-reverse;
   }
 }
 @media only screen and (max-width: 480px) {
-  /* line 216, ../sass/style.scss */
   .projects {
     grid-template-rows: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-columns: 1fr;
   }
 }
+
+/*# sourceMappingURL=style.css.map */
