--- a/sass/projects.scss
+++ b/sass/projects.scss
@@ -10,10 +10,6 @@ $white: #ffffff;
 html {
 	text-align: center;
 	font-family: 'Raleway', sans-serif;
-  	background-image: url("../img/Apartments.jpg");
-	background-size: cover;
-	background-position: top;
-	background-attachment: fixed;
   	color: $dark-blue;
 }
 
@@ -111,7 +107,7 @@ header, .navlinks, footer {
 .intro {
 	width: 80%;
 	margin: 7%;
-	padding: 0 1.5em;
+	padding: 1em 1.5em;
 	background-color: $light-blue;
 	opacity: 0.9;
 
@@ -131,8 +127,6 @@ header, .navlinks, footer {
 .main {
 	background-color: $dark-blue;
 	grid-column: 1 / span 2;
-	width: 80%;
-	margin: 0 auto;
 }
 
 .feature {
@@ -250,6 +244,14 @@ footer {
 			font-size: 1.2em;
 		}
 	}
+
+	.button {
+
+		a {
+			font-size: 1.5em;
+			padding: 0.5em 1.5em;
+		}
+	}
 }
 
 @media only screen and (max-width: 480px) {
@@ -263,6 +265,13 @@ footer {
 		
 		p {
 			font-size: 1.1em;
+		}
+	}
+
+	.button {
+		
+		a {
+			font-size: 1.2em;
 		}
 	}
 }
