--- a/sass/mirae.scss
+++ b/sass/mirae.scss
@@ -447,4 +447,24 @@ body, html {
 			}
 		}
 	}
+
+	.grid {
+
+		footer {
+
+			.teachers {
+				display: grid;
+				grid-template-rows: 1fr 1fr;
+				grid-template-columns: 1fr 1fr;
+				grid-gap: 5px;
+				width: auto;
+				min-width: 225px;
+
+				.matt {
+					margin-left: 0;
+				}
+			}
+		}
+	}
+	
 }
