--- a/stylesheets/mirae.css
+++ b/stylesheets/mirae.css
@@ -316,6 +316,18 @@ body, html {
   .grid section main h2 {
     padding: 0.2em;
   }
+
+  .grid footer .teachers {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    grid-template-columns: 1fr 1fr;
+    grid-gap: 5px;
+    width: auto;
+    min-width: 225px;
+  }
+  .grid footer .teachers .matt {
+    margin-left: 0;
+  }
 }
 
 /*# sourceMappingURL=mirae.css.map */
