--- a/stylesheets/darkside.css
+++ b/stylesheets/darkside.css
@@ -1,14 +1,14 @@
-/* line 4, ../sass/darkside.scss */
 html, body {
   margin: 0;
   padding: 0;
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   color: white;
   color: #b7c9ff;
   box-sizing: border-box;
+  height: 100%;
+  width: 100%;
 }
 
-/* line 13, ../sass/darkside.scss */
 .grid {
   background: url("../img/Darksidelego.jpg") no-repeat center top;
   background-size: cover;
@@ -18,15 +18,13 @@ html, body {
   grid-template-columns: 1fr 2fr;
 }
 
-/* line 22, ../sass/darkside.scss */
 header {
   display: flex;
-  grid-column: 1 / span 2;
+  grid-column: 1/span 2;
   width: 80%;
   margin: 0 auto;
   border-bottom: 1px solid #b7c9ff;
 }
-/* line 30, ../sass/darkside.scss */
 header img {
   width: 5em;
   height: auto;
@@ -36,11 +34,9 @@ header img {
   align-self: center;
 }
 
-/* line 39, ../sass/darkside.scss */
 .banner {
   position: relative;
 }
-/* line 42, ../sass/darkside.scss */
 .banner h1 {
   position: absolute;
   bottom: 5%;
@@ -50,40 +46,33 @@ header img {
   font-family: Arial;
   color: #b7c9ff;
 }
-/* line 51, ../sass/darkside.scss */
 .banner h1 span {
   color: #7F1B21;
 }
 
-/* line 58, ../sass/darkside.scss */
 .signup {
   padding: 1em;
   max-width: 300px;
 }
-/* line 62, ../sass/darkside.scss */
 .signup h3 {
   font-size: 1.5em;
   margin: 0.5em auto;
 }
-/* line 67, ../sass/darkside.scss */
 .signup .forminput {
   display: flex;
   flex-flow: column;
   line-height: 2em;
   font-size: 1.5em;
 }
-/* line 74, ../sass/darkside.scss */
 .signup input {
   background-color: #7F1B21;
   font-size: 1em;
   border-radius: 4px;
   color: #fff;
 }
-/* line 80, ../sass/darkside.scss */
 .signup input:hover {
   border: 2px solid #fff;
 }
-/* line 85, ../sass/darkside.scss */
 .signup button {
   border-radius: 4px;
   margin: 2em auto;
@@ -95,58 +84,48 @@ header img {
   border: 2px solid #fff;
   border-style: outset;
 }
-/* line 96, ../sass/darkside.scss */
 .signup button:hover {
   border: 2px solid #fff;
 }
 
-/* line 103, ../sass/darkside.scss */
 footer {
-  grid-column: 1 / span 2;
+  grid-column: 1/span 2;
   width: 80%;
   margin: 1em auto;
   border-top: 1px solid #b7c9ff;
 }
-/* line 109, ../sass/darkside.scss */
 footer ul {
   display: flex;
   justify-content: center;
   padding-left: 0;
 }
-/* line 114, ../sass/darkside.scss */
 footer ul li {
   list-style: none;
   padding: 1em 2em;
 }
-/* line 118, ../sass/darkside.scss */
 footer ul li a {
   text-decoration: none;
   color: #b7c9ff;
 }
-/* line 122, ../sass/darkside.scss */
 footer ul li a:hover {
   color: #7F1B21;
 }
 
 @media only screen and (max-width: 768px) {
-  /* line 132, ../sass/darkside.scss */
   .grid {
     height: auto;
     grid-template-columns: 1fr;
     grid-template-rows: 1fr 4fr 4fr 1fr;
   }
 
-  /* line 138, ../sass/darkside.scss */
   header, footer {
-    grid-column: 1 / span 1;
+    grid-column: 1/span 1;
   }
 
-  /* line 142, ../sass/darkside.scss */
   .banner {
-    grid-row: 2 / 2;
+    grid-row: 2/2;
     position: static;
   }
-  /* line 146, ../sass/darkside.scss */
   .banner h1 {
     position: static;
     text-align: center;
@@ -154,21 +133,20 @@ footer ul li a:hover {
     max-width: 80%;
   }
 
-  /* line 154, ../sass/darkside.scss */
   header {
-    grid-row: 1 / 1;
+    grid-row: 1/1;
   }
 
-  /* line 158, ../sass/darkside.scss */
   .signup {
-    grid-row: 3 / 3;
+    grid-row: 3/3;
     display: flex;
     justify-content: center;
     margin: 0 auto;
   }
 
-  /* line 165, ../sass/darkside.scss */
   footer {
-    grid-row: 4 / 4;
+    grid-row: 4/4;
   }
 }
+
+/*# sourceMappingURL=darkside.css.map */
